force-app/main/default/objects/CloFMSBillBank__c/CloFMSBillBank__c.object-meta.xml
<CustomObject>
    <label>F/TMS Bill+Bank</label>
    <nameField>
        <displayFormat>BB-{000000}</displayFormat>
        <label>FMS BILL+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F/TMS Bill+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>