force-app/main/default/objects/CloFMSBillBank__c/fields/CloFMSBillID__c.field-meta.xml
<CustomField>
    <fullName>CloFMSBillID__c</fullName>
    <label>CloFMS BILL ID</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>AnkenMeisai__c.BuyDifferentiation__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <filterItems>
            <field>AnkenMeisai__c.UNPAID_BALANCE_OF_BUYING_USD__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <filterItems>
            <field>AnkenMeisai__c.SellDifferentiation__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <filterItems>
            <field>AnkenMeisai__c.UNPAID_BALANCE_OF_SELLING_USD__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AnkenMeisai__c</referenceTo>
    <relationshipName>CloFMSBillBank</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>