force-app/main/default/objects/CloFMSBillBank__c/fields/FMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>FMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>FMS UNPAID BAL OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>