force-app/main/default/objects/CloFMSBillBank__c/fields/FMSUnpaidBalOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>FMSUnpaidBalOfBuyingUSD__c</fullName>
    <label>FMS UNPAID BAL OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>