force-app/main/default/objects/CloFMSBillBank__c/fields/FMSUnreceivedBalOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>FMSUnreceivedBalOfSellingLocal__c</fullName>
    <label>FMS UNRECEIVED BAL OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>