force-app/main/default/objects/CloFMSBillBank__c/fields/ReferNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferNumber__c</fullName>
    <formula>CloFMSBillID__r.Anken__r.REFNO__c</formula>
    <label>REFERENCE NUMBER</label>
    <type>Text</type>
</CustomField>