force-app/main/default/objects/CloFMSBillBank__c/fields/UnpaidBalanceOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingLocal__c</fullName>
    <formula>CloFMSBillID__r.BuyDifferentiation__c</formula>
    <label>UNPAID BALANCE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>