force-app/main/default/objects/CloFMSBillBank__c/fields/UnpaidBalanceOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingUSD__c</fullName>
    <formula>CloFMSBillID__r.UNPAID_BALANCE_OF_BUYING_USD__c</formula>
    <label>UNPAID BALANCE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>