force-app/main/default/objects/CloFMSBillBank__c/fields/UnreceivedBalanceOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceOfSellingLocal__c</fullName>
    <formula>CloFMSBillID__r.SellDifferentiation__c</formula>
    <label>UNRECEIVED BALANCE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>