force-app/main/default/objects/CloFMSBillBank__c/fields/UnreceivedBalanceOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceOfSellingUSD__c</fullName>
    <formula>CloFMSBillID__r.UNPAID_BALANCE_OF_SELLING_USD__c</formula>
    <label>UNRECEIVED BALANCE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>